--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 tokio = { version = "1.41.1", features = ["full"] }
 reqwest = { version = "0.12.9", features = ["json"]}
 serde = { version = "1.0.215", features = ["derive"] }
+serde_json={version = "1.0"}
 warp = "0.3.7"
 dotenv = "0.15.0"
 chrono = "0.4"
